# stfc-mod-new-launcher

./: CLAUDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/sync-types/: SKILL.md
.claude/skills/test-all/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/actions/tauri-build/: action.yml
.github/actions/tauri-package/: action.yml
.github/workflows/: opencode-review.yml  opencode-triage.yml  opencode.yml  pr_build.yml  pull_request.yml  release.yml
.husky/: pre-commit
docs/: runtime-contracts.md
src/: App.test.ts  App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  config_service.rs  diagnostics.rs  errors.rs  events.rs  game_locator.rs  game_updater.rs  github_releases.rs  launch.rs  lib.rs  main.rs  migration.rs  mod_manager.rs  models.rs  rsync_patch.rs  self_update.rs  storage.rs  xsolla.rs
src-tauri/tests/fixtures/: github_releases.json  xsolla_plan.xml
src/components/: DevOverlay.test.ts  DevOverlay.vue  StatusStrip.vue
src/components/config/: ConfigField.test.ts  (+3 more)
src/lib/: bootstrap-status.ts  commands.test.ts  commands.ts  formatError.ts
src/styles/: lcars.css
src/test/: setup.ts
src/types/: launcher.ts
src/views/: ConfigEditor.test.ts  ConfigEditor.vue  MainLauncher.test.ts  MainLauncher.vue
(+22 files in other folders)
