[package]
name = "stfc-mod-new-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stfc_mod_new_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2.0.18"
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
sha2 = "0.11.0"
hex = "0.4.3"
tar = "0.4.46"
zstd = "0.13.3"
tempfile = "3.27.0"
quick-xml = "0.40.1"
serde_with = "3.21.0"
chrono = "0.4.45"
directories = "6.0.0"
sevenz-rust2 = "0.21.0"
librsync = "0.2.5"
tauri-plugin-fs = "2"
